// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component should indicate authenticated failed if form submission is not successful: Error msg and Formik 1`] = `
<Fragment>
  <h1>
    Access your account
  </h1>
  <Alert>
    Login failed! Check your credentials!
  </Alert>
  <Formik
    initialValues={
      Object {
        "password": "",
        "username": "",
      }
    }
    onSubmit={[Function]}
  >
    <Component />
  </Formik>
</Fragment>
`;

exports[`Login component should indicate authenticated failed if form submission is not successful: Formik children 1`] = `
<Form
  inline={false}
  onSubmit={[MockFunction formikSubmit]}
>
  <Field
    component={[Function]}
    label="Username"
    name="username"
  />
  <Field
    component={[Function]}
    label="Password"
    name="password"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</Form>
`;

exports[`Login component should render a loading component while the current user checking is being processed 1`] = `<Loading />`;

exports[`Login component should render a login form if global user is null (e.g. not authenticated): Formik 1`] = `
<Fragment>
  <h1>
    Access your account
  </h1>
  <Formik
    initialValues={
      Object {
        "password": "",
        "username": "",
      }
    }
    onSubmit={[Function]}
  >
    <Component />
  </Formik>
</Fragment>
`;

exports[`Login component should render a login form if global user is null (e.g. not authenticated): Formik children 1`] = `
<Form
  inline={false}
  onSubmit={[MockFunction formikSubmit]}
>
  <Field
    component={[Function]}
    label="Username"
    name="username"
  />
  <Field
    component={[Function]}
    label="Password"
    name="password"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</Form>
`;
